fix(css): drop clipboard copy area bg color and align top copy btn (#65)

--- a/src/global.css
+++ b/src/global.css
@@ -46,7 +46,7 @@ main {
 }
 
 .clipboard-copy {
-  background-color: #0d1117;
+  background-color: #24292e;
 }
 
 .astro-code {
